<resources>
    <string name="app_name">FantaHelp</string>
    <string name="welcome_to_the_fantahelp">Welcome to the FantaHelp!</string>
    <string name="start">new game</string>
    <string name="load">load</string>
    <string name="help">help</string>
    <string name="CreateNewGameLabel">Add 4–10 users to the game</string>
    <string name="usernameMockup">username</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="gameName">game name</string>
    <string name="title_auction" translatable="false">Auction</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_goal">Goal</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="display_choice">\'s turn</string>
    <string name="d">D</string>
    <string name="m">M</string>
    <string name="a">A</string>
    <string name="player">player</string>
    <string name="_0" translatable="false">0</string>
    <string name="decision">decision</string>
    <string name="current_user_s_bet">\'s time to bet</string>
    <string name="pos1" translatable="false">+1</string>
    <string name="pos5" translatable="false">+5</string>
    <string name="neg1" translatable="false">-1</string>
    <string name="neg5" translatable="false">-5</string>
    <string name="bet">bet</string>
    <string name="pass">pass</string>
    <string name="assign">assign</string>
    <string name="k">K</string>
    <string name="_1" translatable="false">1</string>
    <string name="negativeNum">You can\'t perform this action</string>
    <string name="total_credits">Total credits</string>
    <string name="remaining_credits_for_role">Remaining credits for role</string>
    <string name="_0_0" translatable="false">0/0</string>
    <string name="r" translatable="false">R</string>
    <string name="playername" translatable="false">PLAYERNAME</string>
    <string name="squadname" translatable="false">SquadName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>