<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gamesBoxLine">
    <TextView
            style="@style/DashboardPlayers"
            android:text="@string/r"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/roleTeamView"/>
    <TextView
            style="@style/DashboardPlayers"
            android:text="@string/playername"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/roleTeamView"
            android:id="@+id/playerNameTeamView"/>
    <TextView
            style="@style/DashboardPlayers"
            android:text="@string/squadname"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/squadTeamView"
            android:layout_alignParentEnd="true"/>
</RelativeLayout>