<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        tools:context=".view.NewGameActivity">

    <TextView
            android:text="@string/CreateNewGameLabel"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="370dp"
            android:background="@drawable/rect"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/scrollView2">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/scrollLayout"/>
    </ScrollView>
    <EditText
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:hint="@string/usernameMockup"
            android:textColorHint="@android:color/background_light"
            android:ems="10"
            android:id="@+id/usernameInput"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/newGameNameInput"/>
    <EditText
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:hint="@string/gameName"
            android:textColorHint="@android:color/background_light"
            android:ems="10"
            android:id="@+id/newGameNameInput"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:importantForAutofill="no" app:layout_constraintHorizontal_bias="0.0"
    />
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/newGameNext"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onNextButtonClicked"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/newGameBack"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>