<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background3"
        tools:context=".view.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">

        <TextView
                style="@style/ClickableStyle"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/start"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="125dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
                style="@style/ClickableStyle"
                android:text="@string/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/help"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.708"
                app:layout_constraintTop_toBottomOf="@+id/start" android:layout_marginTop="30dp"/>
        <TextView
                style="@style/ClickableStyle"
                android:text="@string/load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/load"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.29" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/start"
        />
        <TextView
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_the_fantahelp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="160dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="26dp" android:layout_marginEnd="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView2"
                android:fontFamily="monospace"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>